# mcp-for-dummies

./: README.md
docs/: mcp-file-location.md
mcp-101-detect-colors/: README.md  pyproject.toml  server.py
mcp-101-detect-colors/mcp_101_detect_colors.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mcp-102-connect-with-api-key/: README.md  code.py
mcp-103-multiple-skills/: README.md  code.py
